package r.prokhorov.interactivestandardtask.presentation.core.util

object TestTags {
    const val LINE_MODE_BUTTON = "line_mode_button"
    const val CHART = "chart"
    const val PROGRESS = "progress"
    const val FETCH_BUTTON = "fetch_button"
    const val ERROR_TEXT = "error_text"
    const val INPUT_FIELD = "input_field"
}